@@ -13,6 +13,8 @@ Changes for 2.10
 ==================================================================================================
 Changes for 2.9.1
 ==================================================================================================
+- Added read file error checking for filter switch settings (somehow, some settings in file >16
+  bits. SDF code now truncates to 16bits and reports a read error to SDF table.
 - Bug Fix (796): Added paging capability to SDF_TABLE to allow listing of up to 400 items.
   Also cleaned up BURT file reader line parsing to pick up on strings.  Was having problems
   when strings started with a number and a string contained more than one word.
